--- a/form.html
+++ b/form.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Survey - Page 1</title>
 
+  <!-- Bootstrap 5.3 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/2cxxxxxxff.js" crossorigin="anonymous"></script>
+
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/443169707e.js" crossorigin="anonymous"></script>
+
+  <!-- External CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +25,7 @@
       <input id="fullname" name="fullname" type="text" class="form-control" required autofocus>
     </div>
 
-    <!-- Radio buttons -->
+    <!-- Radio buttons with tooltip -->
     <p>
       Gender identity
       <span class="tooltip">
@@ -45,7 +50,6 @@
     </div>
 
     <button class="btn btn-primary mt-4" type="button" onclick="window.location.href='confirmation.html';">Next</button>
-
   </form>
 </body>
 </html>
