--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Font Awesome Kit -->
-  <script src="https://kit.fontawesome.com/2cxxxxxxff.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/443169707e.js" crossorigin="anonymous"></script>
 
   <!-- External CSS -->
   <link rel="stylesheet" href="style.css">
@@ -21,7 +21,6 @@
   <p>We appreciate your time. This short form will help us improve inclusivity in tech!</p>
 
   <button class="btn btn-primary mt-4" onclick="window.location.href='form.html';">
-
     Start Survey
   </button>
 </body>
