--- a/thankyou.html
+++ b/thankyou.html
@@ -6,7 +6,7 @@
   <title>Thank You</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/2cxxxxxxff.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/443169707e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
