--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/443169707e.js" crossorigin="anonymous"></script>
 
   <!-- External CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body class="container text-center mt-5">
